# KarmoBot

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
lichess/: .env.example  Dockerfile  README.md  config.yml  homemade.py
src/karmobot/: __init__.py  heuristics.py  increment.py  nnue.py  search.py  transptable.py  zobristhash.py
tests/: __init__.py  test_engine_positions.py  test_incremental.py
