[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karmobot"
version = "0.1.0"
description = "KarmoBot chess engine package"
requires-python = ">=3.10"
dependencies = [
  "chess",
  "nnue-probe @ file:packages/nnue-probe",
]

[tool.setuptools.packages.find]
where = ["src"]
